Написал некоторые перки

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,13 +57,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GArbage\PinchAndZoom.cs" />
+    <Compile Include="Assets\Scripts\Character\PlayerWalking.cs" />
     <Compile Include="Assets\Scripts\UI\ShowClosePanel.cs" />
     <Compile Include="Assets\Scripts\Main.cs" />
     <Compile Include="Assets\Scripts\GArbage\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Character\Player.cs" />
     <Compile Include="Assets\Scripts\Camera\ScrollAndPinch.cs" />
     <Compile Include="Assets\Scripts\UI\StatsInteraction.cs" />
-    <Compile Include="Assets\Scripts\Character\PlayerWalking.cs" />
+    <Compile Include="Assets\Scripts\Model\ChoiceBranch.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
