Сделал время. Время течет только когда персонаж двигается и может изменяться после событий

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Assets\Scripts\UI\StatsInteraction.cs" />
     <Compile Include="Assets\Scripts\UI\InfoPanelScript.cs" />
     <Compile Include="Assets\Scripts\Model\DateTimeInfo.cs" />
+    <Compile Include="Assets\Scripts\UI\StatSliders.cs" />
+    <Compile Include="Assets\Scripts\Model\TimeFlow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
